Fixed the upper nav menu with z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ body {
 nav {
     grid-row: 1/3;
     grid-column: 1/-1;
+    z-index: 2;
     height: 100%;
     padding: 10px;
 
